--- a/FreelanceWebServer/FreelanceWebServer/FreelanceWebServer.csproj
+++ b/FreelanceWebServer/FreelanceWebServer/FreelanceWebServer.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Databases\PostgreSQL\Procedures\" />
+  </ItemGroup>
+
 </Project>
