--- a/FreelanceWebServer/FreelanceWebServer/appsettings.json
+++ b/FreelanceWebServer/FreelanceWebServer/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "AccessTokenSecret": "AccessTokenExampleSecret",
+    "RefreshTokenSecret": "RefreshTokenExampleSecret",
+    "AccessTokenExpirationMinutes": "10",
+    "RefreshTokenExpirationMinutes": "111600",
+    "Issuer": "ExampleIssuer",
+    "Audience": "ExampleAudience"
+  }
 }
